welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: '<-' expected but ')' found.
	for (k -> 0 to nums.lenght-1) {
                                    ^array123:11: error: illegal start of simple expression
} 
^